--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,3 @@
 body {
-    font-family: "Times New Roman", Georgia, Serif;
-    background-color: Khaki;
-}
+  font-family: "Times New Roman", Georgia, Serif;
+  background-color: Khaki; }
